integrated modal in index and buton

--- a/feat/add-card/assets/add-card.css
+++ b/feat/add-card/assets/add-card.css
@@ -98,7 +98,8 @@ h1 {
   display: none;
   animation-name: animatetop;
   animation-duration: 0.4s;
-  position: relative;
+  position: absolute;
+  z-index: 1;
 }
 
 @keyframes animatetop {
