fix: Change Button Behaviour

--- a/feat/floatingbutton/button.css
+++ b/feat/floatingbutton/button.css
@@ -1,47 +1,5 @@
-* {
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
-}
-
-/* chat open and close */
-.chat-bar-open {
-  text-align: center;
-  position: fixed;
-  right: 46%;
-  bottom: 50px;
-  z-index: 99;
-}
-.chat-bar-close {
-  display: none;
-  text-align: center;
-  position: fixed;
-  bottom: 50px;
-  right: 48%;
-  z-index: 99;
-}
-.chat-bar-open .close,
-.chat-bar-close .close {
-  background-color: #d9d9d9;
-  width: 110px;
-  cursor: pointer;
-  height: 60px;
-  padding: 15px;
-  border-radius: 10px;
-  border-style: none;
-  vertical-align: middle;
-  box-shadow: rgb(0 0 0 / 40%) 0.5px 0.5px 3px;
-}
-.chat-bar-close .close {
-  width: 56px;
-  height: 56px;
-  padding: 12px;
-}
-.chat-bar-open .close img {
-  height: 40px;
-}
-.chat-bar-close .close i {
-  font-size: 30px;
+.button-bar {
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
 }
