--- a/feat/search/search.css
+++ b/feat/search/search.css
@@ -1,6 +1,10 @@
-#actionButton {
+.searchbox input {
+  width: 100%;
+  height: 50px;
+  border: none;
   color: #444;
   background: none;
+  border: none;
   border-radius: 8px;
   background-color: white;
   background-color: rgba(255, 255, 255, 0.6);
@@ -10,11 +14,11 @@
   transition: all 0.2s;
 }
 
-#actionButton:active {
+.searchbox input:active {
   transform: translateY(4px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
 }
 
-#actionButton:focus {
+.searchbox input:focus {
   outline: none;
 }
