--- a/feat/floatingbutton/button.css
+++ b/feat/floatingbutton/button.css
@@ -1,7 +1,8 @@
 #actionButton {
   color: #444;
   background: none;
-  border-radius: 8px;
+  border: none;
+  border-radius: 40px;
   background-color: white;
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(10px);
