--- a/feat/listview/view.css
+++ b/feat/listview/view.css
@@ -15,13 +15,13 @@
   margin: 10px 0;
 }
 
-.card-text {
+/* .card-text {
   display: -webkit-box;
-  max-width: 200px;
+  max-width: 700px;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
-}
+} */
 
 #checkbox {
   opacity: 0;
