--- a/feat/search/search.css
+++ b/feat/search/search.css
@@ -5,7 +5,7 @@
   color: #444;
   background: none;
   border: none;
-  border-radius: 8px;
+  border-radius: 8px 0px 0px 8px;
   background-color: white;
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(10px);
@@ -21,4 +21,15 @@
 
 .searchbox input:focus {
   outline: none;
+}
+
+#searchButton {
+  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
+}
+
+#searchButton:hover {
+  color: black;
 }
