--- a/feat/listview/view.css
+++ b/feat/listview/view.css
@@ -22,13 +22,14 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 } */
-
 .checkboxes {
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
   background-color: #eee;
   border: 1px solid #ccc;
   border-radius: 4px;
-  margin-right: 10px;
-  margin-left: 10px;
   /* Hide the default checkbox */
 }
 
@@ -47,11 +48,6 @@
   opacity: 100;
   background-color: #ffefba; /* Change background color when checked */
   border: 1px solid #ffefba;
-}
-
-/* Show the checkmark when the checkbox is checked */
-.checkboxes:checked + #custom-checkbox:after {
-  display: block;
 }
 
 #noResults {
